tests/fixtures/invalid/divmod_set_str.py
# Cannot call divmod() with Set[int], Str
x = divmod({1, 2, 3}, "hello")
